@@ -1,6 +1,1 @@
-AUX upset-0.4-build.patch 1301 RMD160 09de848d42cbe99bf879ed9927d96f3fa05e1f55 SHA1 a27b4a084a4155f187b6e56ad5bc4860db63f83d SHA256 32c98204dd073566a888712f2f1b28793771c68ab15a065467c719c428c629ca
-DIST upset_v04.tar.bz2 190040 RMD160 da91cd24ae828937b354f5969ec0baf8c740d3ee SHA1 3c7a5c33651c78233e801fe1b0288fb6fb0ccc65 SHA256 8213e13d88703b9b65a6ec8134d31305690771c0954d367e75b67191045d4b69
-EBUILD upset-0.4-r1.ebuild 750 RMD160 cbe2c772e346b104b0f4bc3fbf6183317b4b12a3 SHA1 c1990b6a3b9665fb3cbc1f57e37e6e99b74028bb SHA256 c8b236a45c023520f607075c15cc818824999da5e87921fe7aebbaf956e0e2e8
-EBUILD upset-0.4.ebuild 770 RMD160 87cd2cbfc14ee7cfe9abe58e8019b916df93d049 SHA1 9bd3c692c3c86585f2675cb903f539dab512082c SHA256 e1d7ee8602df0d604b07af902220ad2b763b44a2510e0d494ef31883dc30d4e0
-MISC ChangeLog 670 RMD160 55f41ca1981ef1f6c1529c724ed991a99078b41e SHA1 e8300f9ad5b3b3138629862fb06f6059b18c0462 SHA256 b26cfe038d2a2160eb9f15e684b8c49d47e022c9a7e43501825acfae3f6e5125
-MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
+DIST upset_v04.tar.bz2 190040 SHA256 8213e13d88703b9b65a6ec8134d31305690771c0954d367e75b67191045d4b69
