@@ -1,6 +1,9 @@
 # ChangeLog for games-util/upset
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  26 Nov 2012; Michał Ziąbkowski <mziab@o2.pl> -upset-0.4.ebuild:
+  Removed cruft.
 
 *upset-0.4-r1 (01 Feb 2011)
 
